# RL-PulseSeq-One-Axis-BangBang

./: CMakeLists.txt  NPulse_vs_NHarmonic.sh  README  array.py  etavals.txt  gprofile1.txt  linecheck.txt  param.txt  pulse_numbers.txt  run_eta_run.sh  runbootstrapped.sh  runrepeat.sh  tvals.txt
data/: .action.txt.swp  action.txt  bestFilter.txt  chi.txt  freq.txt  initialFilter.txt  initialSignal.txt  loss.txt  reward.txt  sOmega.txt  state.txt  weights.txt
data/job_00000/: action.txt  freq.txt  initialFilter.txt  initialSignal.txt  initialState.txt  loss.txt  noiseParam2.txt  reward.txt  sOmega.txt  state.txt
data/job_00001/: action.txt  freq.txt  loss.txt  reward.txt  sOmega.txt  state.txt
data/job_00002/: action.txt  loss.txt  reward.txt  state.txt
data/job_00003/: action.txt  loss.txt  reward.txt  state.txt
data/job_00004/: action.txt  loss.txt  reward.txt  state.txt
data/job_00005/: action.txt  loss.txt  reward.txt  state.txt
data/job_00006/: action.txt  loss.txt  reward.txt  state.txt
data/job_00007/: action.txt  loss.txt  reward.txt  state.txt
data/job_00008/: action.txt  loss.txt  reward.txt  state.txt
data/job_00009/: action.txt  loss.txt  reward.txt  state.txt
data_1_over_f/job_00000/: action.txt  loss.txt  reward.txt  sOmega.txt  state.txt
data_FD1_boot/: model.dqn
data_FD1_boot/job_00000/: reward.txt  state.txt
data_FD1_boot/job_00001/: action.txt  loss.txt  reward.txt  state.txt
data_FD1_boot/job_00002/: action.txt  reward.txt
data_FD1_boot/job_00003/: action.txt  loss.txt  reward.txt
data_FD2_boot/: model.dqn  model.tgt
data_lorentziansCPMGPeaks/: state.txt
good_job_00001/: action.txt  reward.txt  sOmega.txt
gprof_64_pulse_128_batch/: gprofile2.txt  gprofile3.txt  gprofile4.txt  gprofile5.txt  gprofile5_copy.txt  gprofile6_longrun.txt
include/: .Crystal.hpp.swp  Action.hpp  Agent.hpp  Crystal.hpp  Environment.hpp  GaussQuad.hpp  Greedy.hpp  Network.hpp  Param.hpp  ReplayBuffer.hpp  Sequence.hpp  Translate.hpp
paper_plots/: paper_data_paths.txt
single_job/: action.txt  loss.txt  model.dqn  model.tgt  model2.dqn  model2.tgt  reward.txt  state.txt
src/: learn.cpp
testing/: NJ_contour_plot.py  action_functions.py  action_sequence.py  colors.txt  compare_fft.py  compare_filters.py  damop_plots.py  effective_noise_plot.py  eta_recalibration.py  fft_test.py  fixed_points.py  gaussianquad.py  harmonic_actions.py  job_plot.py  known_solutions.py  new_action_functions.py  optim_chi.py  param_search_array.py  plot_tools.py  plot_tools_old.py  pulse_sequence.py  pushdown_automata.py  single_action_effect.py  squint_plots.py  table.py  temperature_scan.py
(+12653 files in other folders)
